# misc-mayhem

./: .gitignore  git_commits_per_monday.sh
apple-reminder-to-markdown/: pyproject.toml
apple-reminder-to-markdown/src/apple_reminders_to_markdown/: main.py
opc_ua_crt/: README.md  openssl.cnf
